<resources>
    <string name="app_name">Simple MVVM App</string>

    <!-- layouts/fragment_items_list.xml -->
    <string name="fragment_items_list_title">All Items</string>
    <string name="fragment_items_list_no_items_message">Does not have items yet!!</string>
    <string name="fragment_items_list_menu_add_item">Add Item</string>
    <string name="fragment_items_list_generic_connection_error">We have problems connecting to the service :(</string>

    <!-- layouts/fragment_item_form.xml -->
    <string name="fragment_item_form_title">Item Detail</string>
    <string name="fragment_item_form_new_title">New Item</string>
    <string name="fragment_item_form_edit_title">Edit Item</string>
    <string name="fragment_item_form_content_field_label">Item Content</string>
    <string name="fragment_item_form_content_field_help">* This field is required</string>
    <string name="fragment_item_form_save_button">Save</string>
    <string name="fragment_item_form_cancel_button">Cancel</string>
    <string name="fragment_item_form_attach_image_button">Attach Image</string>
    <string name="fragment_item_form_remove_image_button">Remove Image</string>
    <string name="fragment_item_form_attach_image_option_gallery">Attach From Gallery</string>
    <string name="fragment_item_form_attach_image_option_camera">Attach From Camera</string>
    <string name="fragment_item_form_attach_image_option_cancel">Cancel</string>

    <!-- layouts/dialog_fragment_delete_item.xml -->
    <string name="dialog_fragment_delete_item_title">Delete Item</string>
    <string name="dialog_fragment_delete_message">Are you sure to delete this item?</string>
    <string name="dialog_fragment_delete_cancel_button">Cancel</string>
    <string name="dialog_fragment_delete_delete_button">Delete</string>


    <!-- layouts/row_item_list.xml -->
    <string name="row_item_list_delete_btn">Delete</string>
    <string name="row_item_list_not_sync_msg">Item not synced</string>
</resources>