<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.mmachado53.simplemvvmapp.ui.items.ItemFormViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/content_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:helperTextEnabled="true"
            app:helperText="@string/fragment_item_form_content_field_help"
            android:layout_margin="10dp"
            android:hint="@string/fragment_item_form_content_field_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewModel.itemContent}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/content_text_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                visible="@{viewModel.itemImage != null}"
                bitmap="@{viewModel.itemImage}"
                android:scaleType="centerCrop"
                android:maxHeight="200dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/attach_image_button"
                visible="@{viewModel.itemImage == null}"
                android:text="@string/fragment_item_form_attach_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/remove_image_button"
                visible="@{viewModel.itemImage != null}"
                android:text="@string/fragment_item_form_remove_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_marginHorizontal="10dp"
                android:text="@string/fragment_item_form_cancel_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:onClick="@{v -> viewModel.saveItem()}"
                android:enabled="@{viewModel.saveButtonIsEnabled}"
                android:layout_marginHorizontal="10dp"
                android:text="@string/fragment_item_form_save_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
